<resources>
    <string name="app_name">Croasa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Đăng xuất</string>
    <string name="edt_email_login_layout_textHint">Email hoặc số điện thoại</string>
    <string name="edt_pass_login_layout_textHint">Nhập mật khẩu</string>
    <string name="edt_cb_login_layout_textHint">Duy trì đăng nhập</string>
    <string name="tv_login_text">quên mật khẩu</string>
    <string name="btn_login_text">ĐĂNG NHẬP</string>
    <string name="token_stringee">"eyJjdHkiOiJzdHJpbmdlZS1hcGk7dj0xIiwidHlwIjoiSldUIiwiYWxnIjoiSFMyNTYifQ.eyJqdGkiOiJTS04yUGZBOFBKNnNucXJwMlRzVnV2ZHo0T2N4NDRiMzRPLTE1MjcxNDcxOTQiLCJpc3MiOiJTS04yUGZBOFBKNnNucXJwMlRzVnV2ZHo0T2N4NDRiMzRPIiwiZXhwIjoxNTI5NzM5MTk0LCJ1c2VySWQiOiJqaW1teSJ9.y6SQnGnBG0f7Z5p3aIMqkE_DGwRYxluSVz6vb1Smj4E"</string>
</resources>
