<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/backround_login">

    <EditText
        android:inputType="text"
        android:maxLines="1"
        android:id="@+id/edt_email"
        android:layout_marginTop="@dimen/edt_email_login_margintop"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/edt_email_login_layout_marginLeft"
        android:layout_marginRight="@dimen/edt_email_login_layout_marginRight"
        android:layout_height="@dimen/edt_mail_login_height"
        android:layout_alignParentStart="true"
        android:paddingStart="@dimen/edt_email_login_layout_paddingStart"
        android:background="@drawable/edit_name"
        android:drawableLeft="@mipmap/ic_mail_outline_black_24dp"
        android:drawablePadding="@dimen/edt_email_login_layout_drawablePadding"
        android:hint="@string/edt_email_login_layout_textHint"
        />

    <EditText
        android:inputType="text"
        android:maxLines="1"
        android:id="@+id/edt_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edt_pass_login_heigh"
        android:layout_below="@+id/edt_email"
        android:layout_marginLeft="@dimen/edt_pass_login_layout_marginLeft"
        android:layout_marginRight="@dimen/edt_pass_login_layout_marginRight"
        android:background="@drawable/edit_name"
        android:password="true"
        android:layout_marginTop="@dimen/edt_pass_login_layout_marginTop"
        android:drawableLeft="@mipmap/ic_lock_black_24dp"
        android:drawablePadding="@dimen/edt_pass_login_drawablePadding"
        android:paddingStart="@dimen/edt_pass_login_paddingStart"
        android:hint="@string/edt_pass_login_layout_textHint"
         />

    <CheckBox
        android:id="@+id/cb_login"
        android:layout_marginLeft="@dimen/edt_cb_login_layout_marginLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_pass"
        android:text="@string/edt_cb_login_layout_textHint"
        android:checked="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/cb_login"
        android:layout_marginTop="@dimen/edt_tv_login_layout_marginTop"
        android:layout_marginLeft="@dimen/edt_tv_login_layout_marginLeft"
        android:layout_below="@+id/edt_pass"
        android:text="@string/tv_login_text"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_login_layout_height"
        android:layout_below="@+id/cb_login"
        android:layout_marginLeft="@dimen/btn_login_layout_marginLeft"
        android:padding="0dp"
        android:layout_marginRight="@dimen/btn_login_layout_marginRight"
        android:background="@drawable/button_login_background"
        android:textColor="@android:color/white"
        android:text="@string/btn_login_text"/>



</RelativeLayout>